# homebrew-trace

./: .gitignore  CONTRIBUTING.md  HOMEBREW.md  PLAN.md  README.md  pyproject.toml  requirements.txt  test_p5.py
.claude/: ralph-loop.local.md
.github/workflows/: release.yml
Casks/: trace.rb
docs/: api.md  architecture.md  data-flow.md  database.md  llm-pipeline.md
electron/: .eslintrc.json  entitlements.mac.plist  index.html  main.js  package-lock.json  package.json  preload.js  vite.config.ts
electron/.claude/: ralph-loop.local.md
electron/release/: builder-debug.yml
electron/src/: App.tsx  index.css
electron/src/components/: Answer.tsx  ChatInput.tsx  ErrorBoundary.tsx  NoteViewer.tsx  OpenLoops.tsx  Results.tsx  TimeFilter.tsx
electron/src/pages/: Chat.tsx  Dashboard.tsx  Graph.tsx  Home.tsx  Settings.tsx
electron/src/pages/permissions/: Permissions.tsx
electron/src/types/: trace-api.d.ts
homebrew/Casks/: trace.rb
src/: __init__.py
src/capture/: __init__.py  blocklist.py  daemon.py  dedup.py  events.py  foreground.py  location.py  media_remote.py  now_playing.py  screenshots.py  urls.py
src/chat/: __init__.py  api.py  open_loops.py
src/chat/agentic/: __init__.py  classifier.py  executor.py  planner.py  schemas.py
src/chat/agentic/actions/: __init__.py  analysis.py  base.py  graph.py  retrieval.py  web.py
src/chat/agentic/prompts/: __init__.py  planner.py
src/chat/prompts/: __init__.py  answer.py
src/core/: __init__.py  export.py  logging.py  paths.py  retry.py  services.py
src/db/: migrations.py
src/evidence/: __init__.py  buffers.py  builder.py  detector.py  ocr.py  pdf.py
src/insights/: __init__.py  dashboard.py  digest.py  patterns.py
src/jobs/: __init__.py  backfill.py  daily.py  hourly.py
src/platform/: __init__.py  notifications.py  permissions.py  sleep_wake.py  spotlight.py
src/retrieval/: __init__.py  aggregates.py  graph.py  graph_viz.py  hierarchical.py  search.py  time.py
src/summarize/: __init__.py  embeddings.py  entities.py  evidence.py  keyframes.py  render.py  schemas.py  summarizer.py  triage.py
src/summarize/prompts/: __init__.py  hourly.py
src/trace/: __init__.py  cli.py
src/trace_app/: __init__.py  cli.py
src/trace_app/ipc/: __init__.py  blocklist_handlers.py  chat_handlers.py  dashboard_handlers.py  digest_handlers.py  export_handlers.py  graph_handlers.py  models.py  open_loops_handlers.py  patterns_handlers.py  permissions_handlers.py  server.py  service_handlers.py  settings_handlers.py  spotlight_handlers.py
tests/core/: test_paths.py
tests/platform/: __init__.py  test_permissions.py
