[project]
name = "trace"
version = "0.1.0"
description = "A macOS app that captures digital activity, generates Markdown notes, builds a relationship graph, and provides time-aware chat/search"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Jun Kim" }]
keywords = ["productivity", "notes", "activity-tracking", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "fire>=0.5",

    # Database
    "sqlite-vec>=0.1.1",

    # LLM / AI
    "openai>=1.0",
    "tiktoken>=0.5",

    # Scheduling
    "apscheduler>=3.10",

    # Image processing
    "pillow>=10.0",
    "imagehash>=4.3",

    # PDF extraction
    "pymupdf>=1.23",

    # Text processing
    "python-dateutil>=2.8",
    "pytz>=2024.1",

    # macOS integration
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-CoreLocation>=10.0",
    "pyobjc-framework-ScreenCaptureKit>=10.0",

    # HTTP client (for OpenAI)
    "httpx>=0.25",

    # Compression
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
trace = "trace_app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trace_app", "src/core", "src/db", "src/platform"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["trace_app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
